# memcoin

./: .gitignore  CMakeLists.txt  INSTALL.md  PackageOptions.cmake  README.md
share/examples/: memcoin.conf
src/: CMakeLists.txt  addrdb.cpp  addrdb.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.h  cashaddrenc.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  coinstats.cpp  compat.h  compressor.cpp  compressor.h  config.cpp  config.h  core_write.cpp  extversion.h  feerate.cpp  feerate.h  flatfile.cpp  flatfile.h  hash.h  init.cpp  init.h  key.h  key_io.cpp  key_io.h  (+55 more)
src/compat/: assumptions.h
src/config/: CMakeLists.txt
src/consensus/: abla.h  consensus.h  params.h  validation.h
src/dsproof/: dsproof.h  dsproof_create.cpp
src/interfaces/: node.cpp  node.h  wallet.cpp  wallet.h
src/node/: blockstorage.cpp  transaction.cpp
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  token.h  transaction.cpp  transaction.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h  util.cpp
src/script/: descriptor.cpp  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  memcoinconsensus.cpp  memcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  script_flags.h  sigcache.cpp  sigcache.h  (+6 more)
src/univalue/: CMakeLists.txt
src/univalue/include/: univalue.h
(+30 files in other folders)
